Add removed "suggestions.dismiss` string back
This is still used in `account_card.jsx` to be able to dismiss account recommendations in explore.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/locales/en.json
+++ b/app/javascript/flavours/polyam/locales/en.json
@@ -14,5 +14,6 @@
   "status.is_thread": "This toot is part of a thread",
   "status.react": "React",
   "status.reactions.empty": "No one has reacted to this toot yet. When someone does, they will show up here.",
+  "suggestions.dismiss": "Dismiss suggestion",
   "video.alt": "Show alt-text"
 }
