Add endorsed accounts to profiles
Change name of "Hashtags" tab to featured, as originally intended.

Add a new section headline to switch between featured tags and accounts.

Add new wrapped routes for featured tags and accounts.

Change featured component to conditionally show hashtags or accounts.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/locales/en.json
+++ b/app/javascript/flavours/polyam/locales/en.json
@@ -1,4 +1,6 @@
 {
+  "account.featured": "Featured",
+  "account.featured_accounts.empty": "This user doesn't feature any accounts yet.",
   "account.featured_tags.empty": "This user doesn't feature any hashtags yet.",
   "account.request_follow": "Request follow",
   "column.reacted_by": "Reacted by",
