Move `account.follows_you` to polyam locales
Preserve translations by extracting from vanilla to polyam.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/locales/ie.json
+++ b/app/javascript/flavours/polyam/locales/ie.json
@@ -3,7 +3,7 @@
   "account.featured": "Featured",
   "account.featured_accounts.empty": "This user doesn't feature any accounts yet.",
   "account.featured_tags.empty": "This user doesn't feature any hashtags yet.",
-  "account.follows_you": "Folgt dir",
+  "account.follows_you": "Seque te",
   "account.mute_notifications": "Mute notifications from @{name}",
   "account.request_follow": "Request follow",
   "account.unmute_notifications": "Unmute notifications from @{name}",
@@ -12,18 +12,16 @@
   "account_note.glitch_placeholder": "No comment provided",
   "account_note.save": "Save",
   "column.reacted_by": "Reacted by",
-  "compose_form.alt_text_warning.header": "Your attachments are missing a description!",
-  "compose_form.alt_text_warning.message": "Descriptions are for users who are deaf, hard of hearing, blind, or have low vision that prevent them from seeing or hearing an image, video, or audio file. It's recommended that you provide a description for all attached media files so everyone can enjoy using Mastodon.",
-  "footer.documentation": "Dokumentation",
+  "footer.documentation": "Documentation",
   "home.column_settings.show_threads": "Show threads",
-  "notification.reaction": "{name} hat auf deinen Beitrag reagiert",
-  "notifications.column_settings.reaction": "Reaktionen:",
-  "notifications.filter.reactions": "Reaktionen",
+  "notification.reaction": "{name} reacted to your toot",
+  "notifications.column_settings.reaction": "Reactions",
+  "notifications.filter.reactions": "Reactions",
   "reply_indicator.reply_to": "Replying to:",
-  "search.disabled": "Suchfunktion deaktiviert",
+  "search.disabled": "Search disabled",
   "status.hidden_by_moderators": "This toot has been hidden by the moderators of {domain}.",
-  "status.is_thread": "Dieser Toot ist Teil eines Threads",
-  "status.react": "Reagieren",
+  "status.is_thread": "This toot is part of a thread",
+  "status.react": "React",
   "status.reactions.empty": "No one has reacted to this toot yet. When someone does, they will show up here.",
   "video.alt": "Show alt-text"
 }
