--- a/app/javascript/flavours/polyam/locales/tr.json
+++ b/app/javascript/flavours/polyam/locales/tr.json
@@ -1,6 +1,16 @@
 {
+  "account.add_account_note": "Add note for @{name}",
+  "account.featured": "Featured",
+  "account.featured_accounts.empty": "This user doesn't feature any accounts yet.",
   "account.featured_tags.empty": "This user doesn't feature any hashtags yet.",
+  "account.follows_you": "Seni takip ediyor",
+  "account.mute_notifications": "Mute notifications from @{name}",
   "account.request_follow": "Request follow",
+  "account.unmute_notifications": "Unmute notifications from @{name}",
+  "account_note.cancel": "Cancel",
+  "account_note.edit": "Edit",
+  "account_note.glitch_placeholder": "No comment provided",
+  "account_note.save": "Save",
   "column.reacted_by": "Reacted by",
   "compose_form.alt_text_warning.header": "Your attachments are missing a description!",
   "compose_form.alt_text_warning.message": "Descriptions are for users who are deaf, hard of hearing, blind, or have low vision that prevent them from seeing or hearing an image, video, or audio file. It's recommended that you provide a description for all attached media files so everyone can enjoy using Mastodon.",
@@ -11,6 +21,7 @@
   "notifications.filter.reactions": "Reactions",
   "reply_indicator.reply_to": "Replying to:",
   "search.disabled": "Search disabled",
+  "status.hidden_by_moderators": "This toot has been hidden by the moderators of {domain}.",
   "status.is_thread": "This toot is part of a thread",
   "status.react": "React",
   "status.reactions.empty": "No one has reacted to this toot yet. When someone does, they will show up here.",
