Move `account.joined` to polyam locales
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/locales/it.json
+++ b/app/javascript/flavours/polyam/locales/it.json
@@ -4,6 +4,7 @@
   "account.featured_accounts.empty": "This user doesn't feature any accounts yet.",
   "account.featured_tags.empty": "This user doesn't feature any hashtags yet.",
   "account.follows_you": "Ti segue",
+  "account.joined": "Joined {date}",
   "account.mute_notifications": "Mute notifications from @{name}",
   "account.request_follow": "Request follow",
   "account.unmute_notifications": "Unmute notifications from @{name}",
