--- a/app/javascript/flavours/polyam/locales/zh-TW.json
+++ b/app/javascript/flavours/polyam/locales/zh-TW.json
@@ -4,6 +4,7 @@
   "account.featured_accounts.empty": "This user doesn't feature any accounts yet.",
   "account.featured_tags.empty": "This user doesn't feature any hashtags yet.",
   "account.follows_you": "跟隨了您",
+  "account.joined": "加入於 {date}",
   "account.mute_notifications": "Mute notifications from @{name}",
   "account.request_follow": "Request follow",
   "account.unmute_notifications": "Unmute notifications from @{name}",
