--- a/app/javascript/flavours/polyam/locales/fr-CA.json
+++ b/app/javascript/flavours/polyam/locales/fr-CA.json
@@ -14,6 +14,7 @@
   "column.reacted_by": "Reacted by",
   "footer.documentation": "Documentation",
   "home.column_settings.show_threads": "Show threads",
+  "media_gallery.sensitive": "Sensible",
   "notification.reaction": "{name} reacted to your toot",
   "notifications.column_settings.reaction": "Reactions",
   "notifications.filter.reactions": "Reactions",
