--- a/config/locales/activerecord.en-GB.yml
+++ b/config/locales/activerecord.en-GB.yml
@@ -36,7 +36,7 @@ en-GB:
         status:
           attributes:
             reblog:
-              taken: of post already exists
+              taken: of toot already exists
         user:
           attributes:
             email:
