--- a/config/locales/doorkeeper.en-GB.yml
+++ b/config/locales/doorkeeper.en-GB.yml
@@ -138,7 +138,7 @@ en-GB:
         push: Push notifications
         reports: Reports
         search: Search
-        statuses: Posts
+        statuses: Toots
     layouts:
       admin:
         nav:
@@ -178,13 +178,13 @@ en-GB:
       read:notifications: see your notifications
       read:reports: see your reports
       read:search: search on your behalf
-      read:statuses: see all posts
+      read:statuses: see all toots
       write: modify all your account's data
       write:accounts: modify your profile
       write:blocks: block accounts and domains
-      write:bookmarks: bookmark posts
+      write:bookmarks: bookmark toots
       write:conversations: mute and delete conversations
-      write:favourites: favourite posts
+      write:favourites: favourite toots
       write:filters: create filters
       write:follows: follow people
       write:lists: create lists
@@ -192,4 +192,4 @@ en-GB:
       write:mutes: mute people and conversations
       write:notifications: clear your notifications
       write:reports: report other people
-      write:statuses: publish posts
+      write:statuses: publish toots
