--- a/app/javascript/flavours/polyam/locales/en.json
+++ b/app/javascript/flavours/polyam/locales/en.json
@@ -18,6 +18,7 @@
   "polyam.privacy.unlisted.long": "Visible for all, but opted-out of discovery features",
   "polyam.privacy.unlisted.short": "Unlisted",
   "search.disabled": "Search disabled",
+  "settings.only_show_custom_emojis_in_picker": "Only show custom emojis in emoji picker",
   "status.hidden_by_moderators": "This toot has been hidden by the moderators of {domain}.",
   "status.is_thread": "This toot is part of a thread",
   "status.react": "React",
