--- a/app/javascript/flavours/polyam/locales/uz.json
+++ b/app/javascript/flavours/polyam/locales/uz.json
@@ -4,6 +4,7 @@
   "account.featured_accounts.empty": "This user doesn't feature any accounts yet.",
   "account.featured_tags.empty": "This user doesn't feature any hashtags yet.",
   "account.follows_you": "Sizga obuna",
+  "account.joined": "Joined {date}",
   "account.mute_notifications": "Mute notifications from @{name}",
   "account.request_follow": "Request follow",
   "account.unmute_notifications": "Unmute notifications from @{name}",
@@ -14,6 +15,7 @@
   "column.reacted_by": "Reacted by",
   "footer.documentation": "Documentation",
   "home.column_settings.show_threads": "Show threads",
+  "media_gallery.sensitive": "Sensitive",
   "notification.reaction": "{name} reacted to your toot",
   "notifications.column_settings.reaction": "Reactions",
   "notifications.filter.reactions": "Reactions",
@@ -23,6 +25,7 @@
   "polyam.privacy.unlisted.short": "Unlisted",
   "reply_indicator.reply_to": "Replying to:",
   "search.disabled": "Search disabled",
+  "settings.only_show_custom_emojis_in_picker": "Only show custom emojis in emoji picker",
   "status.hidden_by_moderators": "This toot has been hidden by the moderators of {domain}.",
   "status.is_thread": "This toot is part of a thread",
   "status.react": "React",
