--- a/app/javascript/flavours/polyam/locales/vi.json
+++ b/app/javascript/flavours/polyam/locales/vi.json
@@ -4,6 +4,7 @@
   "account.featured_accounts.empty": "This user doesn't feature any accounts yet.",
   "account.featured_tags.empty": "This user doesn't feature any hashtags yet.",
   "account.follows_you": "Đang theo dõi bạn",
+  "account.joined": "Joined {date}",
   "account.mute_notifications": "Mute notifications from @{name}",
   "account.request_follow": "Request follow",
   "account.unmute_notifications": "Unmute notifications from @{name}",
@@ -16,6 +17,7 @@
   "compose_form.alt_text_warning.message": "Descriptions are for users who are deaf, hard of hearing, blind, or have low vision that prevent them from seeing or hearing an image, video, or audio file. It's recommended that you provide a description for all attached media files so everyone can enjoy using Mastodon.",
   "footer.documentation": "Tài liệu",
   "home.column_settings.show_threads": "Show threads",
+  "media_gallery.sensitive": "Sensitive",
   "notification.reaction": "{name} reacted to your toot",
   "notifications.column_settings.reaction": "Reactions",
   "notifications.filter.reactions": "Reactions",
@@ -25,6 +27,7 @@
   "polyam.privacy.unlisted.short": "Hạn chế",
   "reply_indicator.reply_to": "Replying to:",
   "search.disabled": "Search disabled",
+  "settings.only_show_custom_emojis_in_picker": "Only show custom emojis in emoji picker",
   "status.hidden_by_moderators": "This toot has been hidden by the moderators of {domain}.",
   "status.is_thread": "This toot is part of a thread",
   "status.react": "React",
