--- a/app/javascript/flavours/polyam/locales/tok.json
+++ b/app/javascript/flavours/polyam/locales/tok.json
@@ -1,31 +1,22 @@
 {
-  "account.add_account_note": "Add note for @{name}",
   "account.featured": "Featured",
   "account.featured_accounts.empty": "This user doesn't feature any accounts yet.",
   "account.featured_tags.empty": "This user doesn't feature any hashtags yet.",
-  "account.follows_you": "Follows you",
   "account.joined": "Joined {date}",
   "account.mute_notifications": "Mute notifications from @{name}",
   "account.request_follow": "Request follow",
   "account.unmute_notifications": "Unmute notifications from @{name}",
-  "account_note.cancel": "Cancel",
-  "account_note.edit": "Edit",
-  "account_note.glitch_placeholder": "No comment provided",
-  "account_note.save": "Save",
   "column.reacted_by": "Reacted by",
-  "compose_form.alt_text_warning.header": "Your attachments are missing a description!",
-  "compose_form.alt_text_warning.message": "Descriptions are for users who are deaf, hard of hearing, blind, or have low vision that prevent them from seeing or hearing an image, video, or audio file. It's recommended that you provide a description for all attached media files so everyone can enjoy using Mastodon.",
   "footer.documentation": "Documentation",
   "home.column_settings.show_threads": "Show threads",
   "media_gallery.sensitive": "Sensitive",
   "notification.reaction": "{name} reacted to your toot",
-  "notifications.column_settings.reaction": "Reactions:",
+  "notifications.column_settings.reaction": "Reactions",
   "notifications.filter.reactions": "Reactions",
-  "polyam.privacy.direct.short": "Direct",
+  "polyam.privacy.direct.short": "Mentioned people only",
   "polyam.privacy.public.long": "Visible for all",
   "polyam.privacy.unlisted.long": "Visible for all, but opted-out of discovery features",
   "polyam.privacy.unlisted.short": "Unlisted",
-  "reply_indicator.reply_to": "Replying to:",
   "search.disabled": "Search disabled",
   "settings.only_show_custom_emojis_in_picker": "Only show custom emojis in emoji picker",
   "status.hidden_by_moderators": "This toot has been hidden by the moderators of {domain}.",
