--- a/app/javascript/flavours/polyam/locales/es.json
+++ b/app/javascript/flavours/polyam/locales/es.json
@@ -27,6 +27,7 @@
   "polyam.privacy.unlisted.short": "No listado",
   "reply_indicator.reply_to": "Replying to:",
   "search.disabled": "Search disabled",
+  "settings.picker_opts": "Emoji picker categories",
   "status.hidden_by_moderators": "This toot has been hidden by the moderators of {domain}.",
   "status.is_thread": "This toot is part of a thread",
   "status.react": "React",
