--- a/app/javascript/flavours/polyam/locales/tok.json
+++ b/app/javascript/flavours/polyam/locales/tok.json
@@ -1,17 +1,11 @@
 {
-  "account.add_account_note": "Add note for @{name}",
   "account.featured": "Featured",
   "account.featured_accounts.empty": "This user doesn't feature any accounts yet.",
   "account.featured_tags.empty": "This user doesn't feature any hashtags yet.",
-  "account.follows_you": "Seque te",
   "account.joined": "Joined {date}",
   "account.mute_notifications": "Mute notifications from @{name}",
   "account.request_follow": "Request follow",
   "account.unmute_notifications": "Unmute notifications from @{name}",
-  "account_note.cancel": "Cancel",
-  "account_note.edit": "Edit",
-  "account_note.glitch_placeholder": "No comment provided",
-  "account_note.save": "Save",
   "column.reacted_by": "Reacted by",
   "footer.documentation": "Documentation",
   "home.column_settings.show_threads": "Show threads",
@@ -19,11 +13,10 @@
   "notification.reaction": "{name} reacted to your toot",
   "notifications.column_settings.reaction": "Reactions",
   "notifications.filter.reactions": "Reactions",
-  "polyam.privacy.direct.short": "Solmen persones mentionat",
-  "polyam.privacy.public.long": "Visibil a omnes",
-  "polyam.privacy.unlisted.long": "Visibil por omnes, ma excludet de functiones de decovrition",
-  "polyam.privacy.unlisted.short": "Delistat",
-  "reply_indicator.reply_to": "Replying to:",
+  "polyam.privacy.direct.short": "Mentioned people only",
+  "polyam.privacy.public.long": "Visible for all",
+  "polyam.privacy.unlisted.long": "Visible for all, but opted-out of discovery features",
+  "polyam.privacy.unlisted.short": "Unlisted",
   "search.disabled": "Search disabled",
   "settings.picker_opts": "Emoji picker categories",
   "status.hidden_by_moderators": "This toot has been hidden by the moderators of {domain}.",
