--- a/app/javascript/mastodon/locales/en-GB.json
+++ b/app/javascript/mastodon/locales/en-GB.json
@@ -475,11 +475,11 @@
   "notification.mention": "{name} mentioned you",
   "notification.moderation-warning.learn_more": "Learn more",
   "notification.moderation_warning": "You have received a moderation warning",
-  "notification.moderation_warning.action_delete_statuses": "Some of your posts have been removed.",
+  "notification.moderation_warning.action_delete_statuses": "Some of your toots have been removed.",
   "notification.moderation_warning.action_disable": "Your account has been disabled.",
-  "notification.moderation_warning.action_mark_statuses_as_sensitive": "Some of your posts have been marked as sensitive.",
+  "notification.moderation_warning.action_mark_statuses_as_sensitive": "Some of your toots have been marked as sensitive.",
   "notification.moderation_warning.action_none": "Your account has received a moderation warning.",
-  "notification.moderation_warning.action_sensitive": "Your posts will be marked as sensitive from now on.",
+  "notification.moderation_warning.action_sensitive": "Your toots will be marked as sensitive from now on.",
   "notification.moderation_warning.action_silence": "Your account has been limited.",
   "notification.moderation_warning.action_suspend": "Your account has been suspended.",
   "notification.own_poll": "Your poll has ended",
