--- a/app/javascript/mastodon/locales/en-GB.json
+++ b/app/javascript/mastodon/locales/en-GB.json
@@ -63,7 +63,7 @@
   "account.requested_follow": "{name} has requested to follow you",
   "account.share": "Share @{name}'s profile",
   "account.show_reblogs": "Show boosts from @{name}",
-  "account.statuses_counter": "{count, plural, one {{counter} post} other {{counter} posts}}",
+  "account.statuses_counter": "{count, plural, one {{counter} toot} other {{counter} toots}}",
   "account.unblock": "Unblock @{name}",
   "account.unblock_domain": "Unblock domain {domain}",
   "account.unblock_short": "Unblock",
@@ -415,7 +415,7 @@
   "limited_account_hint.title": "This profile has been hidden by the moderators of {domain}.",
   "link_preview.author": "By {name}",
   "link_preview.more_from_author": "More from {name}",
-  "link_preview.shares": "{count, plural, one {{counter} post} other {{counter} posts}}",
+  "link_preview.shares": "{count, plural, one {{counter} toot} other {{counter} toots}}",
   "lists.account.add": "Add to list",
   "lists.account.remove": "Remove from list",
   "lists.delete": "Delete list",
